[package]
name = "dev_notify"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
reqwest = {version = "0.11.18", default-features = false, features = ["rustls-tls-native-roots"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
